qr-UOV/01_Reference_Implementation/build.log
gcc @qruov_config.txt -DQRUOV_PLATFORM=ref -DQRUOV_CONFIG_H_GEN -march=native -mtune=native -O3 -fomit-frame-pointer -fwrapv -fPIC -fPIE -fopenmp -Wno-deprecated-declarations -Wno-unused-result  -lcrypto -Wl,-Bstatic -lcrypto -Wl,-Bdynamic -lm qruov_config_h_gen.c
qruov_config_h_gen.c: In function ‘main’:
qruov_config_h_gen.c:34:5: error: ‘QRUOV_v’ undeclared (first use in this function); did you mean ‘QRUOV_L’?
   34 |     QRUOV_v,
      |     ^~~~~~~
      |     QRUOV_L
qruov_config_h_gen.c:34:5: note: each undeclared identifier is reported only once for each function it appears in
qruov_config_h_gen.c:35:5: error: ‘QRUOV_m’ undeclared (first use in this function); did you mean ‘QRUOV_L’?
   35 |     QRUOV_m,
      |     ^~~~~~~
      |     QRUOV_L
qruov_config_h_gen.c:37:5: error: ‘QRUOV_fc’ undeclared (first use in this function); did you mean ‘QRUOV_L’?
   37 |     QRUOV_fc,
      |     ^~~~~~~~
      |     QRUOV_L
qruov_config_h_gen.c:38:5: error: ‘QRUOV_fe’ undeclared (first use in this function); did you mean ‘QRUOV_L’?
   38 |     QRUOV_fe,
      |     ^~~~~~~~
      |     QRUOV_L
qruov_config_h_gen.c:39:5: error: ‘QRUOV_fc0’ undeclared (first use in this function); did you mean ‘QRUOV_STR’?
   39 |     QRUOV_fc0,
      |     ^~~~~~~~~
      |     QRUOV_STR
make: *** [Makefile:21: qruov_config.h] Error 1
